...
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:padding="50dp">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/purple_love"
                android:fontFamily="@font/muli"
                android:gravity="center"
...
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="Got a Fitnics account?"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/purple_love"
                android:fontFamily="@font/muli"
                android:gravity="center"
...
