...
        <item>Maintain Weight</item>
        <item>Gain Weight</item>
    </string-array>
    <string name="greeting">Welcome, </string>
    <string name="caloriesRemaining">Calories Remaining</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="goal">Goal: </string>
    <string name="remaining">Remaining: </string>
    <string name="searchFood">Search Food</string>
    <string name="foodLog">Food Log</string>
    <string name="searchExercise">Search Exercise</string>
    <string name="exerciseLog">Exercise Log</string>
...
