...
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave"
        app:layout_collapseMode="parallax"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/greeting"
...
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light"
            android:textSize="13sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light"
...
